# cemantixSolver

./: .gitignore  Cargo.toml
src/: cemantix_word.rs  fr.txt  fr3.txt  francais.txt  lib.rs  main.rs  most_common.txt  options.rs  sorted_file  utils.rs  words_getter.rs  words_history
src/options/: extend.rs  graph.rs  nearby.rs  options.rs  remove_useless_words.rs  solve.rs  sort.rs
