[package]
name = "cemantix_ia"
version = "0.1.0"
edition = "2021"
authors = ["david"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
chrono = "0.4.22"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.1.1", features = ["derive"] }

